// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should compile to descriptor (async) 1`] = `
Object {
  "customBlocks": Array [],
  "scopeId": "data-v-01ebe570",
  "script": Object {
    "code": "//
//
//
//
//

export default {
  data () {
    return { name: 'John Doe' }
  }
}
",
    "map": Object {
      "file": "foo.vue",
      "mappings": ";;;;;;AAMA;AACA;AACA;AACA;AACA",
      "names": Array [],
      "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
      "sources": Array [
        "foo.vue",
      ],
      "sourcesContent": Array [
        "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
      ],
      "version": 3,
    },
  },
  "styles": Array [
    Object {
      "code": "
.title {
  color: red;
}
",
      "errors": Array [],
      "map": Object {
        "file": "foo.vue",
        "mappings": ";AAcA;EACA,WAAA;CACA",
        "names": Array [],
        "sources": Array [
          "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
        ],
        "sourcesContent": Array [
          "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
        ],
        "version": 3,
      },
      "media": undefined,
      "module": undefined,
      "moduleName": undefined,
      "rawResult": Result {
        "css": "
.title {
  color: red;
}
",
        "lastPlugin": [Function],
        "map": Object {
          "file": "foo.vue",
          "mappings": ";AAcA;EACA,WAAA;CACA",
          "names": Array [],
          "sources": Array [
            "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
          ],
          "sourcesContent": Array [
            "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
          ],
          "version": 3,
        },
        "messages": Array [],
        "opts": Object {
          "from": "foo.vue",
          "map": Object {
            "annotation": false,
            "inline": false,
            "prev": Object {
              "file": "foo.vue",
              "mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
              "names": Array [],
              "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
              "sources": Array [
                "foo.vue",
              ],
              "sourcesContent": Array [
                "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
              ],
              "version": 3,
            },
          },
          "to": "foo.vue",
        },
        "processor": Processor {
          "plugins": Array [
            [Function],
          ],
          "version": "6.0.21",
        },
        "root": Object {
          "indexes": Object {},
          "lastEach": 3,
          "nodes": Array [
            Object {
              "indexes": Object {},
              "lastEach": 3,
              "nodes": Array [
                Object {
                  "prop": "color",
                  "raws": Object {
                    "before": "
  ",
                    "between": ": ",
                  },
                  "source": Object {
                    "end": Object {
                      "column": 13,
                      "line": 16,
                    },
                    "input": Input {
                      "css": "













.title {
  color: red;
}
",
                      "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                      "map": PreviousMap {
                        "consumerCache": SourceMapConsumer {
                          "__generatedMappings": Array [
                            Mapping {
                              "generatedColumn": 0,
                              "generatedLine": 15,
                              "name": null,
                              "originalColumn": 0,
                              "originalLine": 15,
                              "source": 0,
                            },
                            Mapping {
                              "generatedColumn": 0,
                              "generatedLine": 16,
                              "name": null,
                              "originalColumn": 0,
                              "originalLine": 16,
                              "source": 0,
                            },
                            Mapping {
                              "generatedColumn": 0,
                              "generatedLine": 17,
                              "name": null,
                              "originalColumn": 0,
                              "originalLine": 17,
                              "source": 0,
                            },
                          ],
                          "__originalMappings": Array [
                            Mapping {
                              "generatedColumn": 0,
                              "generatedLine": 15,
                              "name": null,
                              "originalColumn": 0,
                              "originalLine": 15,
                              "source": 0,
                            },
                            Mapping {
                              "generatedColumn": 0,
                              "generatedLine": 16,
                              "name": null,
                              "originalColumn": 0,
                              "originalLine": 16,
                              "source": 0,
                            },
                            Mapping {
                              "generatedColumn": 0,
                              "generatedLine": 17,
                              "name": null,
                              "originalColumn": 0,
                              "originalLine": 17,
                              "source": 0,
                            },
                          ],
                          "_absoluteSources": Array [
                            "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                          ],
                          "_mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
                          "_names": ArraySet {
                            "_array": Array [],
                            "_set": Map {},
                          },
                          "_sourceMapURL": undefined,
                          "_sources": ArraySet {
                            "_array": Array [
                              "foo.vue",
                            ],
                            "_set": Map {
                              "foo.vue" => 0,
                            },
                          },
                          "file": "foo.vue",
                          "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
                          "sourcesContent": Array [
                            "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
                          ],
                        },
                        "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                        "inline": false,
                        "text": "{\\"version\\":3,\\"sources\\":[\\"foo.vue\\"],\\"names\\":[],\\"mappings\\":\\";;;;;;;;;;;;;;AAcA;AACA;AACA\\",\\"file\\":\\"foo.vue\\",\\"sourceRoot\\":\\"/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler\\",\\"sourcesContent\\":[\\"\\\\n<template>\\\\n  <h1 id=\\\\\\"test\\\\\\" class=\\\\\\"title\\\\\\">Hello {{ name }}!</h1>\\\\n</template>\\\\n\\\\n<script>\\\\nexport default {\\\\n  data () {\\\\n    return { name: 'John Doe' }\\\\n  }\\\\n}\\\\n</script>\\\\n\\\\n<style>\\\\n.title {\\\\n  color: red;\\\\n}\\\\n</style>\\\\n\\"]}",
                      },
                    },
                    "start": Object {
                      "column": 3,
                      "line": 16,
                    },
                  },
                  "type": "decl",
                  "value": "red",
                },
              ],
              "raws": Object {
                "after": "
",
                "before": "
",
                "between": " ",
                "semicolon": true,
              },
              "selector": ".title",
              "source": Object {
                "end": Object {
                  "column": 1,
                  "line": 17,
                },
                "input": Input {
                  "css": "













.title {
  color: red;
}
",
                  "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                  "map": PreviousMap {
                    "consumerCache": SourceMapConsumer {
                      "__generatedMappings": Array [
                        Mapping {
                          "generatedColumn": 0,
                          "generatedLine": 15,
                          "name": null,
                          "originalColumn": 0,
                          "originalLine": 15,
                          "source": 0,
                        },
                        Mapping {
                          "generatedColumn": 0,
                          "generatedLine": 16,
                          "name": null,
                          "originalColumn": 0,
                          "originalLine": 16,
                          "source": 0,
                        },
                        Mapping {
                          "generatedColumn": 0,
                          "generatedLine": 17,
                          "name": null,
                          "originalColumn": 0,
                          "originalLine": 17,
                          "source": 0,
                        },
                      ],
                      "__originalMappings": Array [
                        Mapping {
                          "generatedColumn": 0,
                          "generatedLine": 15,
                          "name": null,
                          "originalColumn": 0,
                          "originalLine": 15,
                          "source": 0,
                        },
                        Mapping {
                          "generatedColumn": 0,
                          "generatedLine": 16,
                          "name": null,
                          "originalColumn": 0,
                          "originalLine": 16,
                          "source": 0,
                        },
                        Mapping {
                          "generatedColumn": 0,
                          "generatedLine": 17,
                          "name": null,
                          "originalColumn": 0,
                          "originalLine": 17,
                          "source": 0,
                        },
                      ],
                      "_absoluteSources": Array [
                        "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                      ],
                      "_mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
                      "_names": ArraySet {
                        "_array": Array [],
                        "_set": Map {},
                      },
                      "_sourceMapURL": undefined,
                      "_sources": ArraySet {
                        "_array": Array [
                          "foo.vue",
                        ],
                        "_set": Map {
                          "foo.vue" => 0,
                        },
                      },
                      "file": "foo.vue",
                      "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
                      "sourcesContent": Array [
                        "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
                      ],
                    },
                    "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                    "inline": false,
                    "text": "{\\"version\\":3,\\"sources\\":[\\"foo.vue\\"],\\"names\\":[],\\"mappings\\":\\";;;;;;;;;;;;;;AAcA;AACA;AACA\\",\\"file\\":\\"foo.vue\\",\\"sourceRoot\\":\\"/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler\\",\\"sourcesContent\\":[\\"\\\\n<template>\\\\n  <h1 id=\\\\\\"test\\\\\\" class=\\\\\\"title\\\\\\">Hello {{ name }}!</h1>\\\\n</template>\\\\n\\\\n<script>\\\\nexport default {\\\\n  data () {\\\\n    return { name: 'John Doe' }\\\\n  }\\\\n}\\\\n</script>\\\\n\\\\n<style>\\\\n.title {\\\\n  color: red;\\\\n}\\\\n</style>\\\\n\\"]}",
                  },
                },
                "start": Object {
                  "column": 1,
                  "line": 15,
                },
              },
              "type": "rule",
            },
          ],
          "raws": Object {
            "after": "
",
            "semicolon": false,
          },
          "source": Object {
            "input": Input {
              "css": "













.title {
  color: red;
}
",
              "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
              "map": PreviousMap {
                "consumerCache": SourceMapConsumer {
                  "__generatedMappings": Array [
                    Mapping {
                      "generatedColumn": 0,
                      "generatedLine": 15,
                      "name": null,
                      "originalColumn": 0,
                      "originalLine": 15,
                      "source": 0,
                    },
                    Mapping {
                      "generatedColumn": 0,
                      "generatedLine": 16,
                      "name": null,
                      "originalColumn": 0,
                      "originalLine": 16,
                      "source": 0,
                    },
                    Mapping {
                      "generatedColumn": 0,
                      "generatedLine": 17,
                      "name": null,
                      "originalColumn": 0,
                      "originalLine": 17,
                      "source": 0,
                    },
                  ],
                  "__originalMappings": Array [
                    Mapping {
                      "generatedColumn": 0,
                      "generatedLine": 15,
                      "name": null,
                      "originalColumn": 0,
                      "originalLine": 15,
                      "source": 0,
                    },
                    Mapping {
                      "generatedColumn": 0,
                      "generatedLine": 16,
                      "name": null,
                      "originalColumn": 0,
                      "originalLine": 16,
                      "source": 0,
                    },
                    Mapping {
                      "generatedColumn": 0,
                      "generatedLine": 17,
                      "name": null,
                      "originalColumn": 0,
                      "originalLine": 17,
                      "source": 0,
                    },
                  ],
                  "_absoluteSources": Array [
                    "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                  ],
                  "_mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
                  "_names": ArraySet {
                    "_array": Array [],
                    "_set": Map {},
                  },
                  "_sourceMapURL": undefined,
                  "_sources": ArraySet {
                    "_array": Array [
                      "foo.vue",
                    ],
                    "_set": Map {
                      "foo.vue" => 0,
                    },
                  },
                  "file": "foo.vue",
                  "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
                  "sourcesContent": Array [
                    "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
                  ],
                },
                "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                "inline": false,
                "text": "{\\"version\\":3,\\"sources\\":[\\"foo.vue\\"],\\"names\\":[],\\"mappings\\":\\";;;;;;;;;;;;;;AAcA;AACA;AACA\\",\\"file\\":\\"foo.vue\\",\\"sourceRoot\\":\\"/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler\\",\\"sourcesContent\\":[\\"\\\\n<template>\\\\n  <h1 id=\\\\\\"test\\\\\\" class=\\\\\\"title\\\\\\">Hello {{ name }}!</h1>\\\\n</template>\\\\n\\\\n<script>\\\\nexport default {\\\\n  data () {\\\\n    return { name: 'John Doe' }\\\\n  }\\\\n}\\\\n</script>\\\\n\\\\n<style>\\\\n.title {\\\\n  color: red;\\\\n}\\\\n</style>\\\\n\\"]}",
              },
            },
            "start": Object {
              "column": 1,
              "line": 1,
            },
          },
          "type": "root",
        },
      },
      "scoped": undefined,
    },
  ],
  "template": Object {
    "code": "var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"h1\\", { staticClass: \\"title\\", attrs: { id: \\"test\\" } }, [
    _vm._v(\\"Hello \\" + _vm._s(_vm.name) + \\"!\\")
  ])
}
var staticRenderFns = []
render._withStripped = true
",
    "errors": Array [],
    "functional": false,
    "source": "
<h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
",
    "tips": Array [],
  },
}
`;

exports[`should compile to descriptor 1`] = `
Object {
  "customBlocks": Array [],
  "scopeId": "data-v-01ebe570",
  "script": Object {
    "code": "//
//
//
//
//

export default {
  data () {
    return { name: 'John Doe' }
  }
}
",
    "map": Object {
      "file": "foo.vue",
      "mappings": ";;;;;;AAMA;AACA;AACA;AACA;AACA",
      "names": Array [],
      "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
      "sources": Array [
        "foo.vue",
      ],
      "sourcesContent": Array [
        "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
      ],
      "version": 3,
    },
  },
  "styles": Array [
    Object {
      "code": "
.title {
  color: red;
}
",
      "errors": Array [],
      "map": Object {
        "file": "foo.vue",
        "mappings": ";AAcA;EACA,WAAA;CACA",
        "names": Array [],
        "sources": Array [
          "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
        ],
        "sourcesContent": Array [
          "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
        ],
        "version": 3,
      },
      "media": undefined,
      "module": undefined,
      "moduleName": undefined,
      "rawResult": LazyResult {
        "processed": true,
        "result": Result {
          "css": "
.title {
  color: red;
}
",
          "lastPlugin": [Function],
          "map": Object {
            "file": "foo.vue",
            "mappings": ";AAcA;EACA,WAAA;CACA",
            "names": Array [],
            "sources": Array [
              "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
            ],
            "sourcesContent": Array [
              "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
            ],
            "version": 3,
          },
          "messages": Array [],
          "opts": Object {
            "from": "foo.vue",
            "map": Object {
              "annotation": false,
              "inline": false,
              "prev": Object {
                "file": "foo.vue",
                "mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
                "names": Array [],
                "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
                "sources": Array [
                  "foo.vue",
                ],
                "sourcesContent": Array [
                  "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
                ],
                "version": 3,
              },
            },
            "to": "foo.vue",
          },
          "processor": Processor {
            "plugins": Array [
              [Function],
            ],
            "version": "6.0.21",
          },
          "root": Object {
            "indexes": Object {},
            "lastEach": 3,
            "nodes": Array [
              Object {
                "indexes": Object {},
                "lastEach": 3,
                "nodes": Array [
                  Object {
                    "prop": "color",
                    "raws": Object {
                      "before": "
  ",
                      "between": ": ",
                    },
                    "source": Object {
                      "end": Object {
                        "column": 13,
                        "line": 16,
                      },
                      "input": Input {
                        "css": "













.title {
  color: red;
}
",
                        "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                        "map": PreviousMap {
                          "consumerCache": SourceMapConsumer {
                            "__generatedMappings": Array [
                              Mapping {
                                "generatedColumn": 0,
                                "generatedLine": 15,
                                "name": null,
                                "originalColumn": 0,
                                "originalLine": 15,
                                "source": 0,
                              },
                              Mapping {
                                "generatedColumn": 0,
                                "generatedLine": 16,
                                "name": null,
                                "originalColumn": 0,
                                "originalLine": 16,
                                "source": 0,
                              },
                              Mapping {
                                "generatedColumn": 0,
                                "generatedLine": 17,
                                "name": null,
                                "originalColumn": 0,
                                "originalLine": 17,
                                "source": 0,
                              },
                            ],
                            "__originalMappings": Array [
                              Mapping {
                                "generatedColumn": 0,
                                "generatedLine": 15,
                                "name": null,
                                "originalColumn": 0,
                                "originalLine": 15,
                                "source": 0,
                              },
                              Mapping {
                                "generatedColumn": 0,
                                "generatedLine": 16,
                                "name": null,
                                "originalColumn": 0,
                                "originalLine": 16,
                                "source": 0,
                              },
                              Mapping {
                                "generatedColumn": 0,
                                "generatedLine": 17,
                                "name": null,
                                "originalColumn": 0,
                                "originalLine": 17,
                                "source": 0,
                              },
                            ],
                            "_absoluteSources": Array [
                              "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                            ],
                            "_mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
                            "_names": ArraySet {
                              "_array": Array [],
                              "_set": Map {},
                            },
                            "_sourceMapURL": undefined,
                            "_sources": ArraySet {
                              "_array": Array [
                                "foo.vue",
                              ],
                              "_set": Map {
                                "foo.vue" => 0,
                              },
                            },
                            "file": "foo.vue",
                            "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
                            "sourcesContent": Array [
                              "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
                            ],
                          },
                          "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                          "inline": false,
                          "text": "{\\"version\\":3,\\"sources\\":[\\"foo.vue\\"],\\"names\\":[],\\"mappings\\":\\";;;;;;;;;;;;;;AAcA;AACA;AACA\\",\\"file\\":\\"foo.vue\\",\\"sourceRoot\\":\\"/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler\\",\\"sourcesContent\\":[\\"\\\\n<template>\\\\n  <h1 id=\\\\\\"test\\\\\\" class=\\\\\\"title\\\\\\">Hello {{ name }}!</h1>\\\\n</template>\\\\n\\\\n<script>\\\\nexport default {\\\\n  data () {\\\\n    return { name: 'John Doe' }\\\\n  }\\\\n}\\\\n</script>\\\\n\\\\n<style>\\\\n.title {\\\\n  color: red;\\\\n}\\\\n</style>\\\\n\\"]}",
                        },
                      },
                      "start": Object {
                        "column": 3,
                        "line": 16,
                      },
                    },
                    "type": "decl",
                    "value": "red",
                  },
                ],
                "raws": Object {
                  "after": "
",
                  "before": "
",
                  "between": " ",
                  "semicolon": true,
                },
                "selector": ".title",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 17,
                  },
                  "input": Input {
                    "css": "













.title {
  color: red;
}
",
                    "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                    "map": PreviousMap {
                      "consumerCache": SourceMapConsumer {
                        "__generatedMappings": Array [
                          Mapping {
                            "generatedColumn": 0,
                            "generatedLine": 15,
                            "name": null,
                            "originalColumn": 0,
                            "originalLine": 15,
                            "source": 0,
                          },
                          Mapping {
                            "generatedColumn": 0,
                            "generatedLine": 16,
                            "name": null,
                            "originalColumn": 0,
                            "originalLine": 16,
                            "source": 0,
                          },
                          Mapping {
                            "generatedColumn": 0,
                            "generatedLine": 17,
                            "name": null,
                            "originalColumn": 0,
                            "originalLine": 17,
                            "source": 0,
                          },
                        ],
                        "__originalMappings": Array [
                          Mapping {
                            "generatedColumn": 0,
                            "generatedLine": 15,
                            "name": null,
                            "originalColumn": 0,
                            "originalLine": 15,
                            "source": 0,
                          },
                          Mapping {
                            "generatedColumn": 0,
                            "generatedLine": 16,
                            "name": null,
                            "originalColumn": 0,
                            "originalLine": 16,
                            "source": 0,
                          },
                          Mapping {
                            "generatedColumn": 0,
                            "generatedLine": 17,
                            "name": null,
                            "originalColumn": 0,
                            "originalLine": 17,
                            "source": 0,
                          },
                        ],
                        "_absoluteSources": Array [
                          "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                        ],
                        "_mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
                        "_names": ArraySet {
                          "_array": Array [],
                          "_set": Map {},
                        },
                        "_sourceMapURL": undefined,
                        "_sources": ArraySet {
                          "_array": Array [
                            "foo.vue",
                          ],
                          "_set": Map {
                            "foo.vue" => 0,
                          },
                        },
                        "file": "foo.vue",
                        "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
                        "sourcesContent": Array [
                          "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
                        ],
                      },
                      "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                      "inline": false,
                      "text": "{\\"version\\":3,\\"sources\\":[\\"foo.vue\\"],\\"names\\":[],\\"mappings\\":\\";;;;;;;;;;;;;;AAcA;AACA;AACA\\",\\"file\\":\\"foo.vue\\",\\"sourceRoot\\":\\"/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler\\",\\"sourcesContent\\":[\\"\\\\n<template>\\\\n  <h1 id=\\\\\\"test\\\\\\" class=\\\\\\"title\\\\\\">Hello {{ name }}!</h1>\\\\n</template>\\\\n\\\\n<script>\\\\nexport default {\\\\n  data () {\\\\n    return { name: 'John Doe' }\\\\n  }\\\\n}\\\\n</script>\\\\n\\\\n<style>\\\\n.title {\\\\n  color: red;\\\\n}\\\\n</style>\\\\n\\"]}",
                    },
                  },
                  "start": Object {
                    "column": 1,
                    "line": 15,
                  },
                },
                "type": "rule",
              },
            ],
            "raws": Object {
              "after": "
",
              "semicolon": false,
            },
            "source": Object {
              "input": Input {
                "css": "













.title {
  color: red;
}
",
                "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                "map": PreviousMap {
                  "consumerCache": SourceMapConsumer {
                    "__generatedMappings": Array [
                      Mapping {
                        "generatedColumn": 0,
                        "generatedLine": 15,
                        "name": null,
                        "originalColumn": 0,
                        "originalLine": 15,
                        "source": 0,
                      },
                      Mapping {
                        "generatedColumn": 0,
                        "generatedLine": 16,
                        "name": null,
                        "originalColumn": 0,
                        "originalLine": 16,
                        "source": 0,
                      },
                      Mapping {
                        "generatedColumn": 0,
                        "generatedLine": 17,
                        "name": null,
                        "originalColumn": 0,
                        "originalLine": 17,
                        "source": 0,
                      },
                    ],
                    "__originalMappings": Array [
                      Mapping {
                        "generatedColumn": 0,
                        "generatedLine": 15,
                        "name": null,
                        "originalColumn": 0,
                        "originalLine": 15,
                        "source": 0,
                      },
                      Mapping {
                        "generatedColumn": 0,
                        "generatedLine": 16,
                        "name": null,
                        "originalColumn": 0,
                        "originalLine": 16,
                        "source": 0,
                      },
                      Mapping {
                        "generatedColumn": 0,
                        "generatedLine": 17,
                        "name": null,
                        "originalColumn": 0,
                        "originalLine": 17,
                        "source": 0,
                      },
                    ],
                    "_absoluteSources": Array [
                      "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                    ],
                    "_mappings": ";;;;;;;;;;;;;;AAcA;AACA;AACA",
                    "_names": ArraySet {
                      "_array": Array [],
                      "_set": Map {},
                    },
                    "_sourceMapURL": undefined,
                    "_sources": ArraySet {
                      "_array": Array [
                        "foo.vue",
                      ],
                      "_set": Map {
                        "foo.vue" => 0,
                      },
                    },
                    "file": "foo.vue",
                    "sourceRoot": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler",
                    "sourcesContent": Array [
                      "
<template>
  <h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
</template>

<script>
export default {
  data () {
    return { name: 'John Doe' }
  }
}
</script>

<style>
.title {
  color: red;
}
</style>
",
                    ],
                  },
                  "file": "/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler/foo.vue",
                  "inline": false,
                  "text": "{\\"version\\":3,\\"sources\\":[\\"foo.vue\\"],\\"names\\":[],\\"mappings\\":\\";;;;;;;;;;;;;;AAcA;AACA;AACA\\",\\"file\\":\\"foo.vue\\",\\"sourceRoot\\":\\"/Users/300005163/Workspace/OpenSource/vuejs/vue-component-compiler\\",\\"sourcesContent\\":[\\"\\\\n<template>\\\\n  <h1 id=\\\\\\"test\\\\\\" class=\\\\\\"title\\\\\\">Hello {{ name }}!</h1>\\\\n</template>\\\\n\\\\n<script>\\\\nexport default {\\\\n  data () {\\\\n    return { name: 'John Doe' }\\\\n  }\\\\n}\\\\n</script>\\\\n\\\\n<style>\\\\n.title {\\\\n  color: red;\\\\n}\\\\n</style>\\\\n\\"]}",
                },
              },
              "start": Object {
                "column": 1,
                "line": 1,
              },
            },
            "type": "root",
          },
        },
        "stringified": true,
      },
      "scoped": undefined,
    },
  ],
  "template": Object {
    "code": "var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"h1\\", { staticClass: \\"title\\", attrs: { id: \\"test\\" } }, [
    _vm._v(\\"Hello \\" + _vm._s(_vm.name) + \\"!\\")
  ])
}
var staticRenderFns = []
render._withStripped = true
",
    "errors": Array [],
    "functional": false,
    "source": "
<h1 id=\\"test\\" class=\\"title\\">Hello {{ name }}!</h1>
",
    "tips": Array [],
  },
}
`;
